--- a/style.css
+++ b/style.css
@@ -101,14 +101,13 @@ html, body
 .action
 {
 	width: 100%;
-	height: 10%;
 	float: left;
 }
 
 .action button
 {
 	width: 20%;
-	height: 80%;
+	height: 60px;
 	margin-left: 40%;
 	margin-right: 40%;
 	margin-bottom: 2%;
@@ -118,5 +117,11 @@ html, body
 {
 	margin-left: 1%;
 	width: 98%;
-	height: 200%;
+	height: 160px;
+}
+
+.credit
+{
+	float: right;
+	margin-right: 1%;
 }
