--- a/styleSheet.css
+++ b/styleSheet.css
@@ -9,6 +9,11 @@ html, body
     height: 90%;
 }
 
+button:hover
+{
+	cursor:pointer;
+}
+
 *
 {
 	font-family: "Consolas";
@@ -131,6 +136,11 @@ html, body
 			margin-bottom: 5%;
 			width: 46%;
 		}
+
+			.chooseDif .wrapper textarea:hover
+			{
+				cursor: pointer;
+			}
 
 			.chooseDif .wrapper textarea
 			{
